<resources>
    <string name="app_name">Ec dial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_for_the_best_experience">Log in for the best experience</string>
    <string name="experience_the_all_new_ec_dial">Experience the all new Ec dial!</string>
    <string name="term">By continuing, you agree to Ec dial  <b><font color='#047BD5'>Terms of use</font></b></string>
    <!-- and\n<b><font color='#047BD5'>Privacy Policy.</font></b></string>-->
    <string name="phone_number">Phone Number</string>
    <string name="use_phone_number">Use Phone Number</string>
    <string name="use_email_id">Use Email-ID</string>
    <string name="email_id">Email ID</string>
    <string name="con_tinue">Continue</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="shop">Shop</string>
    <string name="all_categories">All Categories</string>
    <string name="all_offers">Today Deals</string>
    <string name="all_my_orders">My Orders</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="verify">Verify</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_yout_otp_here">Enter your  OTP code here</string>
    <string name="all_category">All Category</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="store_locater">Store Locater</string>
    <string name="brands">Brands</string>
    <string name="save">Save</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="service_booking">Service Booking</string>
    <string name="enter_your_name">Enter your Full Name</string>
    <string name="enter_your_mobile_number">Enter your Mobile number</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="all_brands">All Brands</string>
    <string name="submit">Submit</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular_brands">Popular Brands</string>
    <string name="top_offer">Top Offer</string>
    <string name="all_n_category">All \n Category</string>
    <string name="search_for_products">Search for products</string>
    <string name="new_arrivals">New Arrivals</string>
</resources>